added html structure to blog page

--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,19 @@
 </head>
 
 <body>
+    <main>
+      <article>
+        <h2>Blog title</h2>
+        <blockquote>Content info</blockquote>
+        <p>Posted by</p>
+      </article>
+     </main>
+
+<footer>
+<ul id="love">Made with love by: b3hold23</ul>
+<ul>Email me: angel.rosa.daniel@gmail.com</ul>
+<a href="https://github.com/">Git Hub</a>
+</footer>
 
 </body>
 
