added more content to js files

--- a/blog.html
+++ b/blog.html
@@ -16,11 +16,8 @@
 
 <body>
     <main>
-      <article>
-        <h2>Blog title</h2>
-        <blockquote>Content info</blockquote>
-        <p>Posted by</p>
-      </article>
+      <div id="blogContainer"></div>
+      
      </main>
 
 <footer>
