fixed light and dark mode

--- a/blog.html
+++ b/blog.html
@@ -9,23 +9,23 @@
 
   <link rel="stylesheet" href="./assets/css/styles.css" />
   <link rel="stylesheet" href="./assets/css/blog.css" />
-
-  <script defer src="./assets/js/logic.js" type="text/javascript"></script>
-  <script defer src="./assets/js/blog.js" type="text/javascript"></script>
 </head>
 
 <body>
-    <main>
-      <div id="blogContainer"></div>
-      
-     </main>
-
-<footer>
-<ul id="love">Made with love by: b3hold23</ul>
-<ul>Email me: angel.rosa.daniel@gmail.com</ul>
-<a href="https://github.com/">Git Hub</a>
-</footer>
-
+  <button id="toggle" onclick="toggleMode()">Light mode</button>
+  <main class="dark light">
+    <div id="blogContainer"></div>
+  </main>
+  
+  <footer class="dark light">
+    <ul id="love">Made with love by: b3hold23</ul>
+    <ul>Email me: angel.rosa.daniel@gmail.com</ul>
+    <a href="https://github.com/">Git Hub</a>
+  </footer>
+  
+  
+    <script defer src="./assets/js/logic.js" type="text/javascript"></script>
+    <script defer src="./assets/js/blog.js" type="text/javascript"></script>
 </body>
 
 </html>
