--- a/blog.html
+++ b/blog.html
@@ -9,23 +9,26 @@
 
   <link rel="stylesheet" href="./assets/css/styles.css" />
   <link rel="stylesheet" href="./assets/css/blog.css" />
+
+  <script defer src="./assets/js/logic.js" type="text/javascript"></script>
+  <script defer src="./assets/js/blog.js" type="text/javascript"></script>
 </head>
 
 <body>
-  <button id="toggle" onclick="toggleMode()">Light mode</button>
-  <main class="dark light">
-    <div id="blogContainer"></div>
+  <header>
+    <h1>My First Blog</h1>
+    <nav>
+      <a id="back">⬅ Back</a>
+      <button id="toggle">☀️</button>
+    </nav>
+  </header>
+  <main>
+
   </main>
-  
-  <footer class="dark light">
-    <ul id="love">Made with love by: b3hold23</ul>
-    <ul>Email me: angel.rosa.daniel@gmail.com</ul>
-    <a href="https://github.com/">Git Hub</a>
+  <footer>
+    <p id="love">Made by Angel Fernandez</p>
   </footer>
-  
-  
-    <script defer src="./assets/js/logic.js" type="text/javascript"></script>
-    <script defer src="./assets/js/blog.js" type="text/javascript"></script>
 </body>
 
 </html>
+
